--- a/about.html
+++ b/about.html
@@ -60,66 +60,50 @@
         
 <content>
     <main>
+
         <head>
-            <title>Home | misspy</title>
+            <title>About | misspy</title>
         </head>
+
         <body>
-            <div class="px-4 py-5 my-5 text-center">
-                <h1 class="display-5 fw-bold"><span style="color: #0d6efd;">High-performance</span> Misskey API framework</h1>
-                <div class="col-lg-6 mx-auto">
-                    <p class="lead mb-4">misspy is a <span style="color: #0d6efd;">High-performance</span> Misskey API wrapper built with Python.<br>that implements almost all Misskey APIs point except admin.</p>
-                    <table class="table table-bordered table_bg">
-                        <tbody>
-                            <tr class="table_bg">
-                                <td class="copy-target">pip install misspy</td>
-                                <td class="copy-area">
-                                    <button id="copy-td" class="copy-btn d-block mx-auto bg-white border border-secondary rounded" value="pip install misspy" data-toggle="tooltip">
-                                        <i class="fas fa-clipboard"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <br>
-                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Features</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href='https://docs.misspy.xyz'"><i class="fas fa-book"></i> Read Documents</button>
-                    </div>
+            <h1 style="text-align: center;"><i class="fas fa-star"></i> misspy contributors</h1>
+            <div class="card mx-auto" style="width: 18rem;">
+                <img src="https://0.gravatar.com/avatar/7900d17ff772f89424a51eb2e36fb42e6fcd1a7b4b94936a8f708a832c8477b1" class="card-img-top" alt="sonyakun icon (gravatar)">
+                <div class="card-body">
+                    <h5 class="card-title">sonyakun <span class="badge rounded-pill text-bg-primary"><i class="fa-solid fa-crown"></i> Owner</span> <span class="badge rounded-pill text-bg-success">misspy org member</span></h5>
+                    <p class="card-text">I like Python <i class="fa-solid fa-heart"></i></p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/sonyakun" class="card-link"><i class="fa-brands fa-github"></i> GitHub</a>
+                    <a href="https://misskey.io/@sonyakun" class="card-link"><img src="assets/misskey.png" height="35" width="35"></i> misskey (.io)</a>
                 </div>
             </div>
-            <h1>Features<img src="https://cdn.jsdelivr.net/npm/twemoji@11.3.0/2/svg/2728.svg" height="40" width="40"></h1>
-            <div class="accordion accordion-flus bg" id="accordionFlushExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                            for everyone.
-                        </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">misspy is a bot/client framework for Misskey. The goal of this library is to cover all APIs and allow for no-compromise implementations in projects that use this library.</div>
-                    </div>
+            <!-- 
+            <div class="card mx-auto" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="icon">
+                <div class="card-body">
+                    <h5 class="card-title">name</h5>
+                    <p class="card-text">description</p>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Support Streaming
-                        </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">misspy is supported Misskey's StreamingAPI.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Async is ready.
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">misspy supports Python <a href="https://docs.python.org/3/library/asyncio.html"><span style="color: #0d6efd;">asynchronous I/O</span></a> in most api methods. This means that there is no need to worry about processing being interrupted by blocking from misspy.</div>
-                    </div>
+                <div class="card-body">
+                    <a href="https://github.com/:id" class="card-link"><i class="fa-brands fa-github"></i> GitHub</a>
+                    <a href="https://misskey.io/@:id (example, not required misskey.io)" class="card-link"><img src="assets/misskey.png" height="35" width="35"></i> misskey (.io)</a>
                 </div>
             </div>
+
+            (org member)
+            <div class="card mx-auto" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="icon">
+                <div class="card-body">
+                    <h5 class="card-title">name <span class="badge rounded-pill text-bg-success">misspy org member</span></h5>
+                    <p class="card-text">description</p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/:id" class="card-link"><i class="fa-brands fa-github"></i> GitHub</a>
+                    <a href="https://misskey.io/@:id (example, not required misskey.io)" class="card-link"><img src="assets/misskey.png" height="35" width="35"></i> misskey (.io)</a>
+                </div>
+            </div>
+        -->
         </body>
     </main>
 </content>
