--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <head>    
         <!-- template injected by Jinja2-->
         <meta charset="utf-8">
+        <link rel="icon" type="image/png" href="./assets/misskey.png">
+        <link rel="apple-touch-icon" href="./assets/misskey.png" sizes="180x180">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="misspy is a High-performance Misskey API wrapper built with Python.">
+        <meta propety="og:title" content="misspy - High-performance Misskey API framework">
+        <meta propety="og:description" contents="misspy is a High-performance Misskey API wrapper built with Python. that implements almost all Misskey APIs point except admin.">
+        <meta propety="og:site_name" content="misspy">
         <script src="https://kit.fontawesome.com/5c28f70d03.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link type="text/css" rel="stylesheet" charset="UTF-8" href="https://www.gstatic.com/_/translate_http/_/ss/k=translate_http.tr.qhDXWpKopYk.L.W.O/d=0/rs=AN8SPfp0QXhhaDDdjg_LgcSqoZiPEzC1tw/m=el_main_css">
@@ -50,6 +56,9 @@
                             <a class="nav-link" href="https://docs.misspy.xyz">Documents</a>
                         </li>
                         <li class="nav-item">
+                            <a href="History" class="nav-link px-2 text-body-secondary">History</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="About" class="nav-link px-2 text-body-secondary">About</a>
                         </li>
                     </ul>
@@ -61,7 +70,7 @@
 <content>
     <main>
         <head>
-            <title>Home | misspy</title>
+            <title>Home | misspy - High-performance Misskey API framework</title>
         </head>
         <body>
             <div class="px-4 py-5 my-5 text-center">
