--- a/About/index.html
+++ b/About/index.html
@@ -3,8 +3,8 @@
     <head>    
         <!-- template injected by Jinja2-->
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" href="./assets/misskey.png">
-        <link rel="apple-touch-icon" href="./assets/misskey.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="https://misspy.xyz/assets/misskey.png">
+        <link rel="apple-touch-icon" href="https://misspy.xyz/assets/misskey.png" sizes="180x180">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="misspy is a High-performance Misskey API wrapper built with Python.">
         <meta propety="og:title" content="misspy - High-performance Misskey API framework">
@@ -84,7 +84,7 @@
                 </div>
                 <div class="card-body">
                     <a href="https://github.com/sonyakun" class="card-link"><i class="fa-brands fa-github"></i> GitHub</a>
-                    <a href="https://misskey.io/@sonyakun" class="card-link"><img src="assets/misskey.png" height="35" width="35"></i> misskey (.io)</a>
+                    <a href="https://misskey.io/@sonyakun" class="card-link"><img src="https://misspy.xyz/assets/misskey.png" height="35" width="35" alt=""></i> misskey (.io)</a>
                 </div>
             </div>
             <!-- 
