--- a/About/index.html
+++ b/About/index.html
@@ -40,26 +40,26 @@
         <!-- template injected by Jinja2-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">misspy</a>
+                <a class="navbar-brand" href="https://misspy.xyz/">misspy</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="https://misspy.xyz/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Features">Features</a>
+                            <a class="nav-link" href="https://misspy.xyz#Features">Features</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://docs.misspy.xyz">Documents</a>
                         </li>
                         <li class="nav-item">
-                            <a href="History" class="nav-link px-2 text-body-secondary">History</a>
+                            <a href="https://misspy.xyz/History" class="nav-link px-2 text-body-secondary">History</a>
                         </li>
                         <li class="nav-item">
-                            <a href="About" class="nav-link px-2 text-body-secondary">About</a>
+                            <a href="https://misspy.xyz/About" class="nav-link px-2 text-body-secondary">About</a>
                         </li>
                     </ul>
                 </div>
