--- a/History/index.html
+++ b/History/index.html
@@ -77,6 +77,14 @@
         <body>
             <h1 style="text-align: center;">History</h1>
             <br>
+            <h2 id="2023103" style="text-align: center;">2023.10.3</h2>
+            <ul class="list-group list-group-numbered">
+                <li class="list-group-item">Destructive changes to source code💣 by <a href="https://github.com/sonyakun">@sonyakun</a> in <a href="https://github.com/misspy-development/misspy/pull/28">#28</a></li>
+                <li class="list-group-item"></li>
+                <li class="list-group-item">Changed websocket to use aiohttp websocket when installed with the [speedups] option</li>
+                <li class="list-group-item">Implement <a href="https://misskey-hub.net/docs/api/entity/note.html">Note</a>, <a href="https://misskey-hub.net/docs/api/entity/user.html">User</a>, <a href="">Drive</a></li>
+                <li class="list-group-item"><a href="https://misskey-hub.net/docs/api/entity/note.html">Note</a>, <a href="https://misskey-hub.net/docs/api/entity/user.html">User</a>, <a href="#">Drive</a>を実装</li>
+            </ul>
             <h2 id="202310dev1" style="text-align: center;">2023.10.dev1</h2>
             <ul class="list-group list-group-numbered">
                 <li class="list-group-item">Changed to use aiohttp for http requests that do not send files, improving performance by about 78% (for environments installed with [speedups]).</li>
