--- a/History/index.html
+++ b/History/index.html
@@ -67,49 +67,45 @@
         </nav>
         <!-- template end-->
         
-<content>
-    <main>
+        <content>
+            <main>
 
-        <head>
-            <title>History | misspy - High-performance Misskey API framework</title>
-        </head>
+                <head>
+                    <title>History | misspy - High-performance Misskey API framework</title>
+                </head>
 
-        <body>
-            <h1 style="text-align: center;">History</h1>
-            <br>
-            <h2 id="2023103" style="text-align: center;">2023.10.3</h2>
-            <ul class="list-group list-group-numbered">
-                <li class="list-group-item">Destructive changes to source code💣 by <a href="https://github.com/sonyakun">@sonyakun</a> in <a href="https://github.com/misspy-development/misspy/pull/28">#28</a></li>
-                <li class="list-group-item"></li>
-                <li class="list-group-item">Changed websocket to use aiohttp websocket when installed with the [speedups] option</li>
-                <li class="list-group-item">Implement <a href="https://misskey-hub.net/docs/api/entity/note.html">Note</a>, <a href="https://misskey-hub.net/docs/api/entity/user.html">User</a>, <a href="">Drive</a></li>
-                <li class="list-group-item"><a href="https://misskey-hub.net/docs/api/entity/note.html">Note</a>, <a href="https://misskey-hub.net/docs/api/entity/user.html">User</a>, <a href="#">Drive</a>を実装</li>
-            </ul>
-            <h2 id="202310dev1" style="text-align: center;">2023.10.dev1</h2>
-            <ul class="list-group list-group-numbered">
-                <li class="list-group-item">Changed to use aiohttp for http requests that do not send files, improving performance by about 78% (for environments installed with [speedups]).</li>
-                <li class="list-group-item">Changed websocket to use aiohttp websocket.</li>
-                <li class="list-group-item">Fixed bug in 2023.10.dev0 that caused websocket hooks to not be found</li>
-                <li class="list-group-item"><a href="https://misskey-hub.net/docs/api/entity/note.html">Note</a>, <a href="https://misskey-hub.net/docs/api/entity/user.html">User</a>, <a href="#">Drive</a>を実装</li>
-            </ul>
-            <br>
-            <h2 id="202310dev0" style="text-align: center;">2023.10.dev0</h2>
-            <ul class="list-group list-group-numbered">
-                <li class="list-group-item">Destructive changes to the code</li>
-            </ul>
-            <br>
-            <h2 id="20230917" style="text-align: center;">2023.09.17</h2>
-            <ul class="list-group list-group-numbered">
-                <li class="list-group-item">Add httpx Decencies</li>
-            </ul>
-            <br>
-            <h2 id="20230914" style="text-align: center;">2023.09.14</h2>
-            <ul class="list-group list-group-numbered">
-                <li class="list-group-item"><s>Eliminate httpx from dependent libraries (use aiohttp and requests as alternatives)</s></li>
-            </ul>
-        </body>
-    </main>
-</content>
+                <body>
+                    <h1>History</h1>
+                    <h2>2023.10.3</h2>
+                    <ul>
+                    <li>Changed to use aiohttp for http requests that do not send files, improving performance by about 78% (for environments installed with [speedups]).</li>
+                    <li>Changed websocket to use aiohttp websocket.</li>
+                    <li>Fixed bug in 2023.10.dev0 that caused websocket hooks to not be found</li>
+                    <li><a href="https://misspy.xyz/History/#">drive</a> and <a href="https://misskey-hub.net/docs/api/entity/note.html">note</a> and <a href="https://misskey-hub.net/docs/api/entity/user.html">user</a> implementation</li>
+                    </ul>
+                    <h2>2023.10.dev1 <span class="badge rounded-pill text-bg-warning">Pre-release</span></h2>
+                    <ul>
+                    <li>Changed to use aiohttp for http requests that do not send files, improving performance by about 78% (for environments installed with [speedups]).</li>
+                    <li>Changed websocket to use aiohttp websocket.</li>
+                    <li>Fixed bug in 2023.10.dev0 that caused websocket hooks to not be found</li>
+                    <li><a href="https://misspy.xyz/History/#">drive</a> and <a href="https://misskey-hub.net/docs/api/entity/note.html">note</a> and <a href="https://misskey-hub.net/docs/api/entity/user.html">user</a> implementation</li>
+                    </ul>
+                    <h2>2023.10.dev0 <span class="badge rounded-pill text-bg-warning">Pre-release</span></h2>
+                    
+                    <ul>
+                    <li>Destructive changes to the code</li>
+                    </ul>
+                    <h2>2023.09.17</h2>
+                    <ul>
+                    <li>Add httpx Depencies</li>
+                    </ul>
+                    <h2>2023.09.14</h2>
+                    <ul>
+                    <li><del>Eliminate httpx from dependent libraries (use aiohttp and requests as alternatives)</del></li>
+                    </ul>
+                </body>
+            </main>
+        </content>
 
         <!-- template injected by Jinja2-->
         <div class="container">
